Bug #1696 - Descending letters are cropped or too tight in group titles
Switched line-height fix from em to multipler

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2184,7 +2184,7 @@ body.membership-requests {
             padding: 2%;
             h6{
                 margin: 7px 0 12px;
-                line-height: 1.3em;
+                line-height: 1.2;
             }
             p,
             a{
